# correctness-model-internals

./: .gitignore  MI1_PR1.qmd  README.md  Taskfile.yaml  Taskfile.yml  dvc.yaml  params.yaml  params.yml  pyproject.toml  requirements-cpu.in  requirements-cpu.txt  requirements.in  requirements.txt  scratchpad.ipynb
.dvc/: .gitignore  config
datasets/cities_questions_augmented/: cities_questions_augmented.csv  cities_questions_augmented_2.csv  cities_questions_augmented_2_for_activations.csv  cities_questions_augmented_2_labeled.csv  cities_questions_augmented_for_activations.csv  cities_quetions_augmented_labeled.csv  countries_dictionary.pkl
datasets/custom/: birth_years.csv  cities.csv  cities_dictionary.pkl  cities_dictoinary.pkl  cities_labeled.csv  cities_map.json  football_leagues.csv  football_leagues_dictionary.pkl  football_leagues_labeled.csv  medals.csv  medals_dictionary.pkl  medals_map.json
deleteme/: generate_dummy_data.ipynb
deleteme/labels/: labels.csv
docker/: Dockerfile
docker/scripts/: start.sh
experiment_results/1/: info.json
experiment_results/10/: info.json
experiment_results/11/: info.json
experiment_results/12/: info.json
experiment_results/13/: info.json
experiment_results/14/: info.json
experiment_results/15/: info.json
experiment_results/16/: info.json
experiment_results/2/: info.json
experiment_results/3/: info.json
experiment_results/4/: info.json
experiment_results/5/: info.json
experiment_results/6/: info.json
experiment_results/7/: info.json
experiment_results/8/: info.json
experiment_results/9/: info.json
notebooks/: IDK_analysis.ipynb  MVP Internals.ipynb  analysis_math.ipynb  best_layer_finder.ipynb  cluster_variance_calculator.ipynb  correctness_classification_template.ipynb  create_heatmap_cosine_similaritity.ipynb  create_heatmap_rocauc.ipynb  direction_analysis_different_ds.ipynb  direction_analysis_same_ds.ipynb  generate_datasets.ipynb  generate_dictionaries.ipynb  intra_class_variance_over_inter_class_variance_deepseek_qwen_32b.csv  intra_class_variance_over_inter_class_variance_llama3.1_8b_chat.csv  intra_class_variance_over_inter_class_variance_llama3.3_70b.csv  intra_class_variance_over_inter_class_variance_ministral_8b_instruct.csv  intra_class_variance_over_inter_class_variance_mistral_7b_instruct.csv  intra_class_variance_over_inter_class_variance_qwen_2.5_7b_instruct.csv  llama3_prompting_arnau.ipynb  scratchpad.ipynb  test_classification.ipynb  training_samples_analysis_exp.py  verbalized_confidence_analysis.ipynb
notebooks/best_layer_finding/: aggregate_visualisations.ipynb  automated_best_layer.py  automated_best_layer_deepseek.py  automated_best_layer_llama.py  automated_best_layer_llama70.py  automated_best_layer_ministral.py  automated_best_layer_mistral.py  automated_best_layer_qwen.py  best_layer_finder.ipynb  best_layer_finder_combined_train_sets.ipynb  best_layer_finder_dummy_data.ipynb  best_layer_finder_train_test_different_datasets.ipynb
notebooks/plotting_for_article/: aggregate_visualisations.ipynb  cosine_similarities.ipynb  layer_and_values.ipynb
paper/: bib.bib  main.bbl  main.tex
poster/: beamercolorthemecam.sty  beamerthemegemini.sty  main.aux  main.tex
src/: activations.py  classification.py  data.py  direction.py  llm_judge.py  model.py
src/classifying/: __init__.py  activations.py  activations_handler.py  classification_utils.py  classifying_direction.py  direction_calculator.py  typing.py
src/scripts/: random_noise_labels.py  train_embedding_assessors_combinations.py
src/stages/: capture_activations.py  collect_classification_stats.py  download_hf.py  evaluate_answers.py  format_datasets.py  generate_acts.py  generate_answers.py  generate_embeddings.py  (+6 more)
tests/: conftest.py
truth_analysis_arnau/: directions_analysis.ipynb  directions_analysis_with_anton_code.ipynb  generate_activations.py  generate_truth_data.ipynb
verbalized_confidence/: params.yaml
(+455 files in other folders)
