[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "transformers",
    "sentencepiece",
    "protobuf",
    "pandas",
    "tqdm",
    "matplotlib",
    "numpy",
    "scikit-learn",
    "datasets",
    "evaluate",
    "umap-learn",
    "pyarrow",
    "python-box",
    "black",
    "isort",
    "dvc[gs]",
    "markupsafe<3.0.2",
    "vllm>=0.5.4",
    "huggingface>=0.0.1",
    "hf-transfer>=0.1.9",
    "accelerate>=0.26.0",
    "go-task-bin>=3.42.1",
    "yq>=3.4.3",
    "requests>=2.28.1",
    "litellm>=1.63.14",
    "xgboost>=3.0.0",
    "seaborn>=0.13.2",
]
name = "correctness-model-internals"
version = "0.1.0"
description = "MARS - Predicting correctness from model internals"
authors = [{ name = "Iván Moreno", email = "ivan@ivan.build" }]
requires-python = ">=3.11"

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "gpu" }]]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
name = "pytorch-cuda"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"

[project.optional-dependencies]
cpu = ["torch==2.4.0+cpu"]
gpu = ["torch==2.4.0+cu121", "cupy-cuda12x>=13.4.1"]
dev = ["black", "isort"]

[tool.black]
line-length = 80
target_version = ['py311']
include = 'src\.pyi?$'
exclude = 'venv/'

[tool.isort]
profile = 'black'
py_version = 311
src_paths = ['src']
skip_glob = ["**/.env*", "**/.venv/*"]
